--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <li class="item">
                     <a class="link" href="#about">About</a>
                 </li>
+                <li class="item">
+                    <a class="link" href="#education">Education</a>
+                </li>
 
                 <li class="item">
                     <a class="link" href="#contact">Contact</a>
@@ -117,7 +120,7 @@
 
 
     <br>
-    <section class="section-sm ">
+    <section class="section-sm " id="education">
         <div class="education">
             <h2 class="section-title mb-3">Education</h2>
             <h4 class="institute"><u>Graduation</u> </h4>
