--- a/index.html
+++ b/index.html
@@ -185,10 +185,8 @@
     <!-- footer -->
     <div class="container">
         <footer class="footer">
-            <p class="mb-0">Copyright
+            <p class="header-titl">Copyright
                 <script>document.write(new Date().getFullYear())</script> &copy;
-                <!-- Live Count Section -->
-            <h5 class="box-rounded"><a href="#">Visitors: <span id="visitor-count">0</span></a></h5>
             </p>
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
