--- a/works.html
+++ b/works.html
@@ -83,6 +83,32 @@
         </div>
     </section>
 
+    <div class="container">
+        <footer class="footer">
+            <p class="header-titl">Copyright
+                <script>document.write(new Date().getFullYear())</script> &copy;
+            </p>
+            <div class="social-links text-right m-auto ml-sm-auto">
+                <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
+                <a href="https://x.com/ashwani_l23" class="link"><i class="ti-twitter-alt"></i></a>
+                <a href="https://www.linkedin.com/in/ashwanl23/" class="link"><i class="fab fa-linkedin"></i></a>
+
+
+                <a href="https://leetcode.com/u/ashwanil23/" class="link" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="2 2 13 20">
+                        <path
+                            d="M 10.447266 0.265625 A 0.50005 0.50005 0 0 0 10.103516 0.41796875 L 5.65625 4.8671875 L 3.0957031 7.4257812 A 0.50005 0.50005 0 0 0 2.9785156 7.6035156 C 1.769869 8.9739016 1.7865696 11.063913 3.0957031 12.373047 L 5.65625 14.933594 C 7.0176322 16.294976 9.242133 16.294976 10.603516 14.933594 L 12.853516 12.683594 A 0.50063809 0.50063809 0 1 0 12.144531 11.976562 L 9.8945312 14.226562 C 8.9159134 15.20518 7.3418991 15.20518 6.3632812 14.226562 L 3.8027344 11.666016 C 2.8241166 10.687398 2.8241166 9.1114303 3.8027344 8.1328125 L 6.3632812 5.5742188 C 7.3418991 4.5956009 8.9159135 4.5956009 9.8945312 5.5742188 L 12.144531 7.8242188 A 0.50063784 0.50063784 0 1 0 12.853516 7.1171875 L 10.603516 4.8671875 C 9.9106907 4.174363 8.9943718 3.8431189 8.0820312 3.8554688 L 10.8125 1.125 A 0.50005 0.50005 0 0 0 10.447266 0.265625 z M 7.328125 9.4003906 A 0.50005 0.50005 0 1 0 7.328125 10.400391 L 14.228516 10.400391 A 0.50005 0.50005 0 1 0 14.228516 9.4003906 L 7.328125 9.4003906 z">
+                        </path>
+                    </svg>
+                </a>
+
+
+                <a href="https://www.instagram.com/ashwani.l23/" class="link"><i class="ti-instagram"></i></a>
+                <a href="https://github.com/ashwanil23" class="link"><i class="fab fa-github"></i></a>
+            </div>
+        </footer>
+    </div>
+
     <!-- Include necessary scripts -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
