--- a/works.html
+++ b/works.html
@@ -70,7 +70,7 @@
                 <h2>My Open-Source Contribution</h2>
                 <h4 class="header-titles"><u>Company/Organization: Google</u></h4>
                 <p>🌟 I am thrilled to share my first open-source contribution to a Google project! 🌟 I contributed to
-                    the <a href="https://github.com/google/sunflower" target="_blank" class="link"><b>Sunflower Android
+                    the <a href="https://github.com/android/sunflower" target="_blank" class="link"><b>Sunflower Android
                         application</b></a>, which is a great example of modern Android development.</p>
                 <p>In this contribution, I made an important update to <code>HomeScreen.kt</code>: I removed
                     <code>fillMaxWidth()</code> from the <code>CenterAlignedTopAppBar</code> title. This adjustment
