--- a/works.html
+++ b/works.html
@@ -46,8 +46,9 @@
         <div class="header-content container">
             <div class="header-title-wrapper">
                 <h1 class="header-title">
-                    <span class="up">My Projects</span></h1>
-                <h1 class="header-subtitle"><span class="down">and contributions</span></h1>     
+                    <span class="up">My Projects</span>
+                </h1>
+                <h1 class="header-subtitle"><span class="down">and contributions</span></h1>
             </div>
 
         </div>
@@ -67,19 +68,41 @@
     <section class="section pt-0" id="contribution">
         <div class="container text-center">
             <div class="contribution-details">
-                <h2>My Open-Source Contribution</h2>
+                <h2>Open-Source Contributions</h2>
                 <h4 class="header-titles"><u>Company/Organization: Google</u></h4>
                 <p>🌟 I am thrilled to share my first open-source contribution to a Google project! 🌟 I contributed to
-                    the <a href="https://github.com/android/sunflower" target="_blank" class="link"><b>Sunflower Android
-                        application</b></a>, which is a great example of modern Android development.</p>
+                    the <a href="https://github.com/google/sunflower" target="_blank" class="link"><b>Sunflower Android
+                            application</b></a>, which is a great example of modern Android development.</p>
                 <p>In this contribution, I made an important update to <code>HomeScreen.kt</code>: I removed
                     <code>fillMaxWidth()</code> from the <code>CenterAlignedTopAppBar</code> title. This adjustment
                     resolved an issue where the filter icon would pop up and push the
                     <code>CenterAlignedTopAppBar</code> to the left when switching between the My Garden and Plant List
-                    screens.</p>
-                <p>Check out the details of my contribution here: <a href="https://github.com/android/sunflower/pull/978"
+                    screens.
+                </p>
+                <p>Check out the details of my contribution here: <a href="https://github.com/google/sunflower/pull/978"
                         target="_blank" class="link"><b>Pull Request #978</b></a></p>
             </div>
+            <div class="contribution-details">
+                <h2>Projects</h2>
+                <h4 class="header-titles"><u></u></h4>
+                <p>
+                    I am excited to share my latest project, an Android application called <strong>10 Weeks of Web
+                        Development</strong>, which is now available on my <a
+                        href="https://github.com/ashwanil23/10-Weeks-of-Web-Development" target="_blank" class="link">GitHub
+                        repository</a>. This app showcases my proficiency with a wide array of basic composable
+                    functions in Jetpack Compose. Throughout the development process, I meticulously applied the concept
+                    of scrolling lists to create a seamless user experience. Furthermore, I integrated engaging
+                    animations and leveraged the power of Material Design 3 to incorporate shape, type, and theme
+                    colors. This project not only demonstrates my technical skills but also my ability to craft visually
+                    appealing and highly functional user interfaces. Dive into the repository to explore the code and
+                    see the full extent of what I've accomplished in this exciting endeavor!
+                </p>
+            </div>
+            <div class="screenshot">
+                <img src="assets\imgs\10WeeksOfWebDev.jpg" alt="10 Weeks of Web Development App Screenshot">
+            </div>
+
+
         </div>
     </section>
 
@@ -89,7 +112,7 @@
                 <script>document.write(new Date().getFullYear())</script> &copy;
             </p>
             <div class="social-links text-right m-auto ml-sm-auto">
-                
+
                 <a href="https://x.com/ashwani_l23" class="link"><i class="ti-twitter-alt"></i></a>
                 <a href="https://www.linkedin.com/in/ashwanl23/" class="link"><i class="fab fa-linkedin"></i></a>
 
