--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <p>While everyone around me was venturing into web development, I chose the road less traveled. I
                         have always been driven by the desire to take on challenges and stand out by taking a different
                         path.</p>
-                    <a href="https://rb.gy/row1ch" class="btn mt-4" target="_blank">
+                    <a href="assets\resume\RESUME 2.pdf" class="btn mt-4" target="_blank">
                         <button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button> </a>
                 </div>
             </div><!-- end of about wrapper -->
