--- a/index.html
+++ b/index.html
@@ -226,7 +226,35 @@
     <!-- ashwani js -->
     <script src="assets/js/ashwani.js"></script>
 
+    <script>
+        const roles = ["Android Developer", "Engineer", "Tech Explorer"];
+        let index = 0;
+        let charIndex = 0;
+        let typingElement = document.querySelector('.typing');
 
+        function typeEffect() {
+            if (charIndex < roles[index].length) {
+                typingElement.textContent += roles[index].charAt(charIndex);
+                charIndex++;
+                setTimeout(typeEffect, 100);
+            } else {
+                setTimeout(eraseEffect, 1000);
+            }
+        }
+
+        function eraseEffect() {
+            if (charIndex > 0) {
+                typingElement.textContent = roles[index].substring(0, charIndex - 1);
+                charIndex--;
+                setTimeout(eraseEffect, 50);
+            } else {
+                index = (index + 1) % roles.length;
+                setTimeout(typeEffect, 500);
+            }
+        }
+
+        document.addEventListener("DOMContentLoaded", typeEffect);
+    </script>
 </body>
 
 </html>
